--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=c3e7f8a9b2d1e4f6a8b9c0d1e2f3a4b5
+APP_SECRET=CHANGE_ME_TO_A_RANDOM_SECRET_KEY
 APP_SHARE_DIR=var/share
 ###< symfony/framework-bundle ###
 
@@ -33,7 +33,7 @@ DEFAULT_URI=http://localhost
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://plateforme_user:password123@127.0.0.1:5432/plateforme_dons_troc?serverVersion=16&charset=utf8"
+DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
